Post alignment fixed

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -5,6 +5,7 @@
   .grid-container ul {
     display: grid;
     grid-template-columns: 33% 33% 33%;
+    padding: 0px;
   }
 
   .blog-page-title {
